# ReceiptScanner

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: conf.py  index.html  index.rst  processor.rst
src/marymount/edu/receiptscanner/: main.py  processor.py  service.py  web.py
src/marymount/edu/receiptscanner/static/: style.css
src/marymount/edu/receiptscanner/templates/: index.html  item.html
tests/: test_main.py
uploads/: f12ad943-7ea1-4a11-bd9c-d5de3d8d1c5a_Chapter 3- Reserarch Methodology.pptx
